# Sturct-ai

./: .env.example  .gitignore  README.md  START_HERE.bat  STRUCT-AI.bat  STRUCT-AI_README n  STRUCT-AI_README n (1).odt  pnpm-lock.yaml  pyproject.toml  replit.md  start-windows.bat  start_api.bat  start_bridge.bat
.upm/: store.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/trading-api/: .env  generate_device_key.py  generate_secrets.py  main.py  requirements.txt  ws_manager.py
artifacts/trading-api/mt5-bridge/: mt5_bridge.py
artifacts/trading-api/routers/: auth.py  auto_trade.py  collect.py  daily_pnl.py  data.py  mt5.py  narrative.py  news.py  quick_scalp.py  structure.py  trading.py
artifacts/trading-api/scripts/: collect_history.py
artifacts/trading-api/services/: auth_service.py  auto_trade_engine.py  bos_engine.py  candle_pattern_engine.py  choch_engine.py  data_service.py  db.py  framework_checker.py  framework_checker.py.txt  mt5_store.py  mtf_sr_engine.py  narrative_engine.py  pip_utils.py  session_engine.py  structure_cache.py  structure_engine.py  trend_engine.py  trendline_engine.py  zigzag_engine.py  (+1 more)
artifacts/trading-dashboard/: index.html  vite.config.ts
backend/: requirements.txt
backend/mt5-bridge/: mt5_bridge.py
backend/routers/: data.py  mt5.py
backend/services/: bos_engine.py  mt5_store.py  structure_engine.py  trend_engine.py  trendline_engine.py  zones_engine.py
docs/: STRUCT-AI-Full-Documentation (3).md
frontend/: requirements.yaml
frontend/src/: App.tsx  index.css
launcher/: install_requirements.bat
(+32 files in other folders)
